; ModuleID = '/home/carl/AnghaBench/libgit2/tests/repo/extr_init.c_assert_config_entry_on_init.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/repo/extr_init.c_assert_config_entry_on_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_repo = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @assert_config_entry_on_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_config_entry_on_init(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @assert_config_entry_on_init_bytype(i8* %5, i32 %6, i32 1)
  %8 = load i32, i32* @_repo, align 4
  %9 = call i32 @git_repository_free(i32 %8)
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @assert_config_entry_on_init_bytype(i8* %10, i32 %11, i32 0)
  ret void
}

declare dso_local i32 @assert_config_entry_on_init_bytype(i8*, i32, i32) #1

declare dso_local i32 @git_repository_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
